# jkl

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
include/system/: result.h  stack_allocator.h  time.h
include/system/thread/: config.h  statistic.h  thread.h
source/: time.cpp
source/thread/: thread.cpp
system/: CMakeLists.txt  doxygen_make
system/cmake/: system-config.cmake.in
system/include/system/: result.h  thread.h  thread_config.h  thread_statistic.h  time.h
system/source/: thread.cpp  time.cpp
system/test/: CMakeLists.txt
system/test/system/: thread.cpp
tests/: CMakeLists.txt
tests/system/: thread.cpp
